src/test/resources/invalid_tests/ArgumentConstraintTest3.cnna
architecture ArgumentConstraintTest3(img_height=224, img_width=224, img_channels=3, classes=1000){
    def input Z(0:255)^{H:img_height, W:img_width, C:img_channels} image
    def output Q(0:1)^{C:classes} predictions

    def conv(filter, channels, stride=1, act=true){
        Convolution(kernel=(filter,filter), channels=channels, stride=(stride,stride)) ->
        BatchNorm() ->
        Relu(?=act)
    }
    def skip(channels, stride){
        Convolution(kernel=(1,1), channels=64, stride=(stride,stride)) ->
        BatchNorm()
    }
    def resLayer(channels, stride=1){
        (
            conv(filter=3, channels=channels, stride=stride) ->
            conv(filter=3, channels=channels, stride=stride, act=false)
        |
            skip(channels=channels, stride=stride, ?=(stride!=1))
        ) ->
        Add() ->
        Relu()
    }

    image ->
    conv(filter=7, channels=64, stride=2) ->
    Pooling(type="max", kernel=(3,3), stride=(2,2), padding="valid") ->
    resLayer(channels=64, ->=3) ->
    resLayer(channels=128, stride=2) ->
    GlobalPooling(type="avg", ?=1) ->
    FullyConnected(units=classes) ->
    Softmax() ->
    predictions
}
